[metadata]
name = libinv
version = 0.0.1
author = Hritik Vijay
author_email = hrtk@duck.com
description = Deployment hook based SBOM and SCA database @ CRED
keywords = sca, sbom
classifiers =
    Framework :: Flask
    Programming Language :: Python :: 3

[options]
python_requires = >=3.7
install_requires =
    alembic
    attrs
    black
    boto3
    docker
    Flask
    Flask-SQLAlchemy
    immutabledict
    isort
    packaging
    pylint
    ruff
    requests
    SQLAlchemy >= 2.0.0
    tqdm
    click
    GitPython
    semgrep
    javalang
    jira
    python-dotenv >= 1.0.0
    psycopg2
    networkx
    pyvis
    gunicorn
    schedule
    sphinx
    sphinx-rtd-theme
    cryptography
    pyjwt
packages = find:

[options.extras_require]
DEV =
    pytest >= 8.3.3
    coverage >= 7.6.4

[options.entry_points]
console_scripts =
    libinv = libinv.cli.cli:cli
